--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "homepage": "https://github.com/rogerhutchings/balzan-website",
   "devDependencies": {
-    "harp": "^0.15.2"
+    "harp": "^0.15.2",
+    "nib": "^1.1.0"
   }
 }
