--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "browser-sync": "^2.6.5",
     "bulk-require": "^0.2.1",
     "gulp": "^3.8.11",
+    "gulp-concat": "^2.5.2",
+    "gulp-uglify": "^1.2.0",
     "harp": "^0.15.2",
     "nib": "^1.1.0"
   },
