--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "bulk-require": "^0.2.1",
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
+    "gulp-if": "^1.2.5",
     "gulp-uglify": "^1.2.0",
     "harp": "^0.15.2",
     "nib": "^1.1.0"
   },
   "scripts": {
-    "start": "NODE_ENV=production harp server -p $PORT",
+    "start": "NODE_ENV=production gulp server",
     "deploy": "./node_modules/.bin/harp compile",
-    "dev": "./node_modules/.bin/harp server"
+    "dev": "./node_modules/.bin/gulp dev"
   },
   "engines": {
     "node": "0.10.x"
