--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "nib": "^1.1.0"
   },
   "scripts": {
-    "start": "NODE_ENV=production gulp server",
-    "deploy": "./node_modules/.bin/harp compile",
+    "start": "NODE_ENV=production ./node_modules/.bin/gulp server",
     "dev": "./node_modules/.bin/gulp dev"
   },
   "engines": {
