--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "bootstrap-styl": "^4.0.3",
     "browser-sync": "^2.6.5",
     "bulk-require": "^0.2.1",
+    "del": "^1.1.1",
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
     "gulp-if": "^1.2.5",
+    "gulp-rsync": "0.0.5",
     "gulp-uglify": "^1.2.0",
     "harp": "^0.15.2",
-    "nib": "^1.1.0"
+    "nib": "^1.1.0",
+    "run-sequence": "^1.1.0"
   },
   "scripts": {
     "start": "NODE_ENV=production ./node_modules/.bin/gulp server",
