--- a/.editorconfig
+++ b/.editorconfig
@@ -12,5 +12,5 @@ insert_final_newline = true
 [*.md]
 trim_trailing_whitespace = false
 
-[Makefile]
-indent_style = tab
+[package.json]
+indent_size = 2
