--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
     "gulp-if": "^1.2.5",
-    "gulp-rsync": "0.0.5",
     "gulp-uglify": "^1.2.0",
     "harp": "^0.20.0",
     "nib": "^1.1.0",
@@ -29,7 +28,7 @@
   },
   "scripts": {
     "start": "gulp",
-    "deploy": "gulp deploy"
+    "build": "gulp compile"
 
   },
   "engines": {
