--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,28 @@
 language: node_js
 node_js:
-- '4'
+  - '4'
 cache: npm
+
 addons:
   ssh_known_hosts: newc-web.new.ox.ac.uk
+
 before_install:
-- if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
+  - if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
+
 install:
-- npm install
+  - npm install
+
 script:
-- npm run build
+  - npm run build
+
 before_deploy:
-- openssl aes-256-cbc -K $encrypted_a1f816d44b7b_key -iv $encrypted_a1f816d44b7b_iv
-  -in deploy_rsa.enc -out /tmp/deploy_rsa -d
-- eval "$(ssh-agent -s)"
-- chmod 600 /tmp/deploy_rsa
-- ssh-add /tmp/deploy_rsa
+  - echo $SERVER_SSH_PUBLIC_KEY >> $HOME/.ssh/known_hosts
+  - openssl aes-256-cbc -K $encrypted_a1f816d44b7b_key -iv $encrypted_a1f816d44b7b_iv
+    -in deploy_rsa.enc -out /tmp/deploy_rsa -d
+  - eval "$(ssh-agent -s)"
+  - chmod 600 /tmp/deploy_rsa
+  - ssh-add /tmp/deploy_rsa
+
 deploy:
   skip_cleanup: true
   provider: script
