--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script:
   - npm run build
 
 before_deploy:
-  - echo $SSH_SERVER_PUBLIC_KEYs >> $HOME/.ssh/known_hosts
+  - echo $SSH_SERVER_PUBLIC_KEY >> $HOME/.ssh/known_hosts
   - openssl aes-256-cbc -K $encrypted_a1f816d44b7b_key -iv $encrypted_a1f816d44b7b_iv
     -in deploy_rsa.enc -out /tmp/deploy_rsa -d
   - eval "$(ssh-agent -s)"
