--- a/package.json
+++ b/package.json
@@ -14,25 +14,23 @@
     "format": "prettier --write ."
   },
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "@11ty/eleventy": "^0.12.1",
+    "@11ty/eleventy-img": "^1.0.0",
     "autoprefixer": "^10.3.7",
     "css-loader": "^4.3.0",
     "css-minimizer-webpack-plugin": "^3.1.1",
+    "eleventy-plugin-automatic-noopener": "^2.0.2",
+    "js-yaml": "^3.14.0",
     "mini-css-extract-plugin": "^0.11.3",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.1.7",
     "postcss-loader": "^4.0.4",
     "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
     "tailwindcss": "^2.0.1",
     "webpack": "^5.60.0",
-    "webpack-cli": "^4.9.1"
-  },
-  "dependencies": {
-    "@11ty/eleventy-img": "^1.0.0",
-    "eleventy-plugin-automatic-noopener": "^2.0.2",
-    "js-yaml": "^3.14.0",
-    "postcss": "^8.1.7",
+    "webpack-cli": "^4.9.1",
     "webpack-manifest-plugin": "^4.0.2"
   }
 }
