--- a/src/_data/organisation.yml
+++ b/src/_data/organisation.yml
@@ -1,32 +1,32 @@
 - name: Prof Chris Lintott
   title: Director
   organisation: Dept of Physics, University of Oxford; New College Oxford
-  image: "./src/images/organisation/lintott.jpg"
+  image: './src/images/organisation/lintott.jpg'
   email: cjl@astro.ox.ac.uk
   website: http://www2.physics.ox.ac.uk/contacts/people/lintott
 
 - name: Dr Adrienne Slyz
   title: Chair, Advisory Committee
   organisation: Dept of Physics, University of Oxford; New College Oxford
-  image: "./src/images/organisation/slyz.jpg"
+  image: './src/images/organisation/slyz.jpg'
   email: slyz@astro.ox.ac.uk
   website: http://www2.physics.ox.ac.uk/contacts/people/slyz
 
 - name: Prof Marc Kamionkowski
   title: Advisory Committee
   organisation: Dept of Physics and Astronomy, Johns Hopkins University
-  image: "./src/images/organisation/kamionkowski.png"
+  image: './src/images/organisation/kamionkowski.png'
   website: http://www.pha.jhu.edu/~kamion/www/Home.html
 
 - name: Prof John March-Russell
   title: Advisory Committee
   organisation: Dept of Physics, University of Oxford; New College Oxford
-  image: "./src/images/organisation/march_russell.jpg"
+  image: './src/images/organisation/march_russell.jpg'
   website: http://www2.physics.ox.ac.uk/contacts/people/march-russell
 
 - name: Prof Joe Silk
   title: Advisory Committee
   organisation: Institut d'Astrophysique, Paris; Dept of Physics and Astronomy, Johns Hopkins University; Beecroft Institute for Particle Physics and Cosmology and New College Oxford
-  image: "./src/images/organisation/silk.jpg"
+  image: './src/images/organisation/silk.jpg'
   email: silk@iap.fr
   website: http://www.physics.ox.ac.uk/astro/people/JoeSilk.htm
