--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,3 +22,7 @@ jobs:
       - run: npm run build --if-present
       - name: rsync deployments
         uses: contention/rsync-deployments@v1.0.0
+        args:
+          - "-avzr --delete"
+          - "--exclude .htaccess --exclude /uploads/"
+          - ${{ secrets.DEPLOY_TARGET }}
