Update March-Russell image, readme, rename submission dates

--- a/src/_data/application_dates.yml
+++ b/src/_data/application_dates.yml
@@ -1,7 +1,7 @@
 # Academic year
 # e.g. 2021/22
-academicYear: 2021/22
+academicYear: 2019/20
 
-# Closing date for submissions
+# Closing date for applications
 # e.g. June 7th 2019
 closingDate: June 7th 2019
