--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: '14.x'
       - run: npm install
       - run: npm run build --if-present
-      - name: deploy via rsync
+      - name: Deploy via rsync
         uses: burnett01/rsync-deployments@5.1
         with:
           switches: -avzr --delete
