--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "^10.3.7",
     "css-loader": "^4.3.0",
     "css-minimizer-webpack-plugin": "^3.1.1",
+    "dotenv": "^10.0.0",
     "eleventy-plugin-automatic-noopener": "^2.0.2",
     "js-yaml": "^3.14.0",
     "mini-css-extract-plugin": "^0.11.3",
