--- a/src/_data/host_scientists.yml
+++ b/src/_data/host_scientists.yml
@@ -8,6 +8,8 @@
       email: Andy.Bunker@physics.ox.ac.uk
     - name: Martin Bureau
       email: bureau@astro.ox.ac.uk
+    - name: Michele Cappellari
+      email: michele.cappellari@physics.ox.ac.uk
     - name: Joseph Conlon
       email: j.conlon1@physics.ox.ac.uk
     - name: Julien Devriendt
