--- a/src/_data/host_scientists.yml
+++ b/src/_data/host_scientists.yml
@@ -76,6 +76,8 @@
       email: colombi@iap.fr
     - name: Frederic Dagne
       email: daigne@iap.fr
+    - name: Yohan Dubois
+      email: dubois@iap.fr
     - name: Irina Dvorkin
       email: dvorkin@iap.fr
     - name: Kumiko Kotera
