--- a/src/_data/host_scientists.yml
+++ b/src/_data/host_scientists.yml
@@ -74,7 +74,7 @@
       email: marco.cirelli@lpthe.jussieu.fr
     - name: Stephane Colombi
       email: colombi@iap.fr
-    - name: Frederic Dagne
+    - name: Frederic Daigne
       email: daigne@iap.fr
     - name: Yohan Dubois
       email: dubois@iap.fr
