--- a/src/_data/host_scientists.yml
+++ b/src/_data/host_scientists.yml
@@ -45,6 +45,10 @@
 
 - institution: Johns Hopkins
   people:
+    - name: Emanuele Berti
+      email: berti@jhu.edu
+    - name: Sean Carroll
+      email: seancarroll@jhu.edu
     - name: Marc Kamionkowski
       email: kamion@jhu.edu
     - name: David Kaplan
@@ -53,6 +57,8 @@
       email: kapla14@jhu.edu
     - name: Julian Krolik
       email: jhk@pha.jhu.edu
+    - name: Brice Menard
+      email: menard@jhu.edu
     - name: Colin Norman
       email: norman@stsci.edu
     - name: Joe Silk
