--- a/src/_data/application_dates.yml
+++ b/src/_data/application_dates.yml
@@ -1,7 +1,7 @@
 # Academic year
 # e.g. 2021/22
-academicYear: 2023/24
+academicYear: 2024/25
 
 # Closing date for applications
 # e.g. June 7th 2019
-closingDate: March 18th 2023
+closingDate: May 31st 2024
