--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@11ty/eleventy": "^1.0.2",
+    "@11ty/eleventy": "^2.0.1",
     "@11ty/eleventy-img": "^1.0.0",
+    "@11ty/eleventy-upgrade-help": "^2.0.5",
     "autoprefixer": "^10.3.7",
     "css-loader": "^4.3.0",
     "css-minimizer-webpack-plugin": "^3.1.1",
