--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,13 +10,13 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Build using node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v4
         with:
-          node-version: '14.x'
-      - run: npm install
-      - run: npm run build --if-present
+          node-version: '20'
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm run build --if-present
         env:
           URL: 'https://balzan.new.ox.ac.uk'
       - name: Deploy via rsync
