Sync current site content

--- a/src/_data/application_dates.yml
+++ b/src/_data/application_dates.yml
@@ -4,4 +4,4 @@ academicYear: 2024/25
 
 # Closing date for applications
 # e.g. June 7th 2019
-closingDate: May 31st 2024
+closingDate: August 23rd 2024
